--- a/cmark-sections.cabal
+++ b/cmark-sections.cabal
@@ -1,8 +1,8 @@
 name:                cmark-sections
 version:             0.1.0.0
-synopsis:            Split cmark-parsed Markdown into sections
+synopsis:            Represent cmark-parsed Markdown as a tree of sections
 description:
-  Split cmark-parsed Markdown into sections
+  Represent cmark-parsed Markdown as a tree of sections
 homepage:            http://github.com/aelve/cmark-sections
 bug-reports:         http://github.com/aelve/cmark-sections/issues
 license:             BSD3
@@ -25,6 +25,28 @@ library
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.7 && <5
+                     , base-prelude == 1.*
+                     , cmark >= 0.5 && < 0.5.3
+                     , containers
+                     , microlens == 0.4.*
+                     , microlens-th >= 0.3 && < 0.5
+                     , split == 0.2.*
+                     , text
   ghc-options:         -Wall -fno-warn-unused-do-bind
   hs-source-dirs:      lib
+  default-language:    Haskell2010
+
+test-suite tests
+  main-is:             Main.hs
+  type:                exitcode-stdio-1.0
+  build-depends:       QuickCheck >= 2.8 && < 3
+                     , base >=4.7 && <5
+                     , base-prelude == 1.*
+                     , cmark
+                     , cmark-sections
+                     , containers
+                     , hspec == 2.2.*
+                     , text
+  ghc-options:         -Wall -fno-warn-unused-do-bind
+  hs-source-dirs:      tests
   default-language:    Haskell2010
