--- a/cmark-sections.cabal
+++ b/cmark-sections.cabal
@@ -39,8 +39,8 @@ test-suite tests
   main-is:             Main.hs
   type:                exitcode-stdio-1.0
   build-depends:       QuickCheck >= 2.8 && < 3
-                     , base >=4.7 && <5
-                     , base-prelude == 1.*
+                     , base
+                     , base-prelude
                      , cmark
                      , cmark-sections
                      , containers
